--- a/index.html
+++ b/index.html
@@ -12,52 +12,93 @@
     <ul class="nav">
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="recipes.html">Recipes</a></li>
     </ul>
     <!-- Header -->
     <header class="custom-header">
         <div class="header-container">
-            <h1>Welcome to my Website</h1>
-            <p>Learn how to make cupcakes with me.</p>
+            <h1>Welcome to ChatGPT's Recipe Book</h1>
+            <p>Learn how to make cupcakes from ChatGPT</p>
         </div>
     </header>
     <!-- Main Body -->
-    <h1>Recipes</h1>
-    <div class="recipe">
-        <h2>Chocolate Cupcake</h2>
-        <div class="recipe-img">
+    <section id="recipes">
+        <h1 class="center">Recipes</h1>
+        <div class="container recipe">
+            <h2>Chocolate Cupcake</h2>
             <img src="images/chocolate-cupcake.jpeg" alt="chocolate cupcake">
+            <div class="recipe-content">
+                <p id="chatgpt">I asked ChatGPT: "how do you make chocolate cupcakes?"</p>
+                <h3>Ingredients</h3>
+                <ul>
+                    <li>1 and 3/4 cups (220g) all-purpose flour</li>
+                    <li>3/4 cup (65g) unsweetened cocoa powder</li>
+                    <li>1 and 1/2 teaspoons baking powder</li>
+                    <li>1/2 teaspoon baking soda</li>
+                    <li>1/2 teaspoon salt</li>
+                    <li>1/2 cup (115g) unsalted butter, at room temperature</li>
+                    <li>1 cup (200g) granulated sugar</li>
+                    <li>2 large eggs</li>
+                    <li>2 teaspoons vanilla extract</li>
+                    <li>1/2 cup (120ml) buttermilk</li>
+                </ul>
+                <h3>Instructions</h3>
+                <ol>
+                    <li>Preheat your oven to 350°F (180°C). Line a 12-count muffin tin with paper liners.</li>
+                    <li>In a medium mixing bowl, whisk together the flour, cocoa powder, baking powder, baking soda, and salt.</li>
+                    <li>In a separate large mixing bowl, cream together the butter and sugar until light and fluffy, about 3 minutes. Beat in the eggs, one at a time, then stir in the vanilla extract.</li>
+                    <li>Gradually mix in the dry ingredients, alternating with the buttermilk, until just combined.</li>
+                    <li>Divide the batter evenly among the prepared muffin cups.</li>
+                    <li>Bake for 18-20 minutes, or until a toothpick inserted into the center of a cupcake comes out clean.</li>
+                    <li>Remove the cupcakes from the oven and let them cool in the pan for 5 minutes, then transfer them to a wire rack to cool completely.</li>
+                    <li>Once the cupcakes are cooled, you can frost them with your favorite frosting.</li>
+                </ol>
+                <p>Enjoy your homemade chocolate cupcakes!</p>
+            </div>
         </div>
-        <div class="recipe-content">
-            <p>https://sallysbakingaddiction.com/super-moist-chocolate-cupcakes/</p>
-            <h3>Ingredients</h3>
-            <ul>
-                <li>flour</li>
-                <li>cocoa powder</li>
-                <li>butter</li>
-                <li>sugar</li>
-            </ul>
-            <h3>Instructions</h3>
-            <ol>
-            <li>mix dry ingredients</li>
-            <li>stir in wet ingredients</li>
-        </ol>
+        <div class="container recipe">
+            <h2>Strawberry Cupcake</h2>
+            <div class="recipe-img">
+                <img src="images/strawberry-cupcake.jpeg" alt="strawberry cupcake">
+            </div>
+            <p id="chatgpt">I asked ChatGPT: "how do you make strawberry cupcakes?"</p>
+            <div class="recipe-content">
+                <h3>Ingredients</h3>
+                <ul>
+                    <li>1 and 3/4 cups (220g) all-purpose flour</li>
+                    <li>1 and 1/2 teaspoons baking powder</li>
+                    <li>1/2 teaspoon salt</li>
+                    <li>1/2 cup (115g) unsalted butter, at room temperature</li>
+                    <li>1 cup (200g) granulated sugar</li>
+                    <li>2 large eggs</li>
+                    <li>2 teaspoons vanilla extract</li>
+                    <li>1/2 cup (120ml) milk</li>
+                    <li>1 cup (150g) chopped fresh strawberries</li>
+                    </ul>
+                <h3>Instructions</h3>
+                <ol>
+                    <li>Preheat your oven to 350°F (180°C). Line a 12-count muffin tin with paper liners.</li>
+                    <li>In a medium mixing bowl, whisk together the flour, baking powder, and salt.</li>
+                    <li>In a separate large mixing bowl, cream together the butter and sugar until light and fluffy, about 3 minutes. Beat in the eggs, one at a time, then stir in the vanilla extract.</li>
+                    <li>Gradually mix in the dry ingredients, alternating with the milk, until just combined.</li>
+                    <li>Gently fold in the chopped strawberries.</li>
+                    <li>Divide the batter evenly among the prepared muffin cups.</li>
+                    <li>Bake for 18-20 minutes, or until a toothpick inserted into the center of a cupcake comes out clean.</li>
+                    <li>Remove the cupcakes from the oven and let them cool in the pan for 5 minutes, then transfer them to a wire rack to cool completely.</li>
+                    <li>Once the cupcakes are cooled, you can frost them with your favorite frosting.</li>
+                </ol>
+                <p>Enjoy your homemade strawberry cupcakes!</p>
+            </div>
         </div>
-    </div>
-    <div class="recipe">
-        <h2>Strawberry Cupcake</h2>
-        <div class="recipe-img">
-            <img src="images/strawberry-cupcake.jpeg" alt="strawberry cupcake">
-        </div>
-        
-        <p>https://preppykitchen.com/strawberry-cupcakes/</p>
-        <div class="recipe-content">
-            <h3>Ingredients</h3>
-            <h3>Instructions</h3>
-        </div>
-    </div>
+    </section>
     <!-- Footer -->
-    <footer>
-
+    <footer class="custom-footer">
+        <p id="special-text">
+            <script>
+              document.write("Page last updated on " + document.lastModified);
+           </script>
+        </p>
+        <div id="special-text" class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Elaine Dong 2022</p></div>
     </footer>
 </body>
 </html>
