--- a/recipes.html
+++ b/recipes.html
@@ -54,7 +54,7 @@
               document.write("Page last updated on " + document.lastModified);
            </script>
         </p>
-        <div id="special-text" class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Elaine Dong 2022</p></div>
+       <p id="special-text">Copyright &copy; Elaine Dong 2022</p>
     </footer>
 </body>
 </html>
